2009-01-28  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Rename PULSEAUDIO_SOURCES and JTREG_SOURCES
	to avoid conflict with autoconf names.  Move misplaced
	endif in download.stamp.
	* patches/icedtea-rhino.patch:
	Remove merge conflicts.
	
2009-01-26  Andrew John Hughes  <ahughes@redhat.com>

	Bump to b44.
	* patches/icedtea-io_util-overflow.patch:
	Dropped, applied upstream.
	* HACKING: Updated.
	* Makefile.am: Bump to b44, drop io_util-overflow patch.
	* patches/icedtea-linker-libs-order.patch:
	Recreated against b44.

2009-01-19  Andrew John Hughes  <ahughes@redhat.com>

	Merge with IcedTea6.
	* patches/hotspot/original/icedtea-sparc64-linux.patch,
	* patches/icedtea-cc-interp-no-fer.patch,
	* patches/icedtea-hotspot-6b12-7b24.patch: Removed.
	* .hgignore,
	* ChangeLog,
	* HACKING,
	* IcedTeaPlugin.cc,
	* Makefile.am,
	* acinclude.m4,
	* configure.ac,
	* contrib/jck/compile-native-code.sh,
	* contrib/mixtec-hacks.patch,
	* contrib/mixtec-sleep-on-bomb.patch,
	* generated/com/sun/corba/se/impl/logging/ActivationSystemException.java,
	* generated/com/sun/corba/se/impl/logging/IORSystemException.java,
	* generated/com/sun/corba/se/impl/logging/InterceptorsSystemException.java,
	* generated/com/sun/corba/se/impl/logging/NamingSystemException.java,
	* generated/com/sun/corba/se/impl/logging/OMGSystemException.java,
	* generated/com/sun/corba/se/impl/logging/ORBUtilSystemException.java,
	* generated/com/sun/corba/se/impl/logging/POASystemException.java,
	* generated/com/sun/corba/se/impl/logging/UtilSystemException.java,
	* hotspot.map,
	* javac.in,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/JARDesc.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/NetxPanel.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/Parser.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/PluginBridge.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/cache/Resource.java,